--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,8 @@ h1{
     padding: 15px;
     margin: 10px 0 0px 0;
     border-radius: 5px;
+    border-style: none;
+    background-color: #ffffff;
   }
 
   #button{
